--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -7027,6 +7027,7 @@ a.more-link:before {
 }
 .pane-node-share-widget .hwc-share-widget ul {
   list-style: none;
+  overflow: hidden;
 }
 .pane-node-share-widget .hwc-share-widget ul li.share-this-article {
   display: none;
@@ -7037,6 +7038,7 @@ a.more-link:before {
   height: 23px;
   overflow: hidden;
   margin-right: 7px;
+  float: left;
 }
 .pane-node-share-widget .hwc-share-widget ul li a {
   padding-left: 30px;
@@ -7059,6 +7061,7 @@ a.more-link:before {
 }
 .hwc-share-widget ul {
   list-style: none;
+  overflow: hidden;
 }
 .hwc-share-widget ul li.share-this-article {
   display: none;
@@ -7069,6 +7072,7 @@ a.more-link:before {
   height: 23px;
   overflow: hidden;
   margin-right: 7px;
+  float: left;
 }
 .hwc-share-widget ul li a {
   padding-left: 30px;
@@ -8264,6 +8268,10 @@ a.more-link:before {
   display: table;
   border-collapse: collapse;
 }
+.page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .related-partners-2 > div .group-left a img {
+  width: auto;
+  height: 100px;
+}
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .related-partners-2 > div > .even:first-child,
 .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .related-partners-2 > div > .odd:first-child {
   display: table-cell;
@@ -8514,6 +8522,15 @@ a.more-link:before {
   font-size: 0.8em;
   margin-bottom: 25px;
   color: #58585a;
+}
+.page-oira-faqs #block-system-main .view-id-faqs_oira .views-field-body .faq-answer .article-link {
+  color: #786586;
+  font-weight: bold;
+  font-style: italic;
+  text-decoration: underline !important;
+}
+.page-oira-faqs #block-system-main .view-id-faqs_oira .views-field-body .faq-answer .article-link:hover {
+  color: #23527c;
 }
 .page-oira-faqs #block-system-main .view-id-faqs_oira .views-field-title-field.ui-accordion-header-active a .field-content:after {
   content: "\e253";
@@ -9131,6 +9148,11 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
   border-collapse: collapse;
   width: 100%;
 }
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div .group-left a img,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div .group-left a img {
+  width: auto;
+  height: 100px;
+}
 #quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div > .even:first-child,
 #quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div > .even:first-child,
 #quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div > .odd:first-child,
@@ -9597,6 +9619,10 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
 .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .related-partners-2 > div {
   display: table;
   border-collapse: collapse;
+}
+.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .related-partners-2 > div .group-left a img {
+  width: auto;
+  height: 100px;
 }
 .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .related-partners-2 > div > .even:first-child,
 .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .related-partners-2 > div > .odd:first-child {
@@ -10141,6 +10167,10 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container a:hover {
 .page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .related-partners-2 > div {
   display: table;
   border-collapse: collapse;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .related-partners-2 > div .group-left a img {
+  width: auto;
+  height: 100px;
 }
 .page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .related-partners-2 > div > .even:first-child,
 .page-search-site .oira-search-form-container #osha-search-search-form div:first-child #edit-content .search-page-results-wrapper .view-mode-search_result .related-partners-2 > div > .odd:first-child {
