--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -227,6 +227,21 @@ a.more-link{
     }
 }
 
+.alert.alert-block.alert-info{
+	border: 0px;
+	background-color: @color-primary;
+	margin-left: 15px;
+	margin-right: 15px;
+	p{
+		margin-bottom: 0px !important;
+		span{
+			color: @color-text-purple-darker;
+			font-style: italic;
+			font-weight: bold;
+		}
+	}
+}
+
 .field-name-field-publication-date, .field-type-datetime{
 	margin-bottom: 15px;
 	color: @color-text-purple;
