css changes- deleting some comments into the css files

--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -611,7 +611,7 @@ h1.page-header {
 	}
 	h2 {
 	    font-size: @font-size1-2;
-	    line-height: auto !important;
+	    line-height: inherit !important;
 	}
 	h4{
 		font-size: @font-size1-2;
@@ -621,7 +621,7 @@ h1.page-header {
 	}
 	.pane-node-field-summary {
 	    font-size: 1em;
-	    line-height: auto;
+	    line-height: inherit;
 	    color: @color-text-purple;
 	}
 	.pane-node-body {
