--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1103,74 +1103,61 @@ h1.page-header {
 
 /* EU LEVEL COUNTRY
 *************************************************/
-.page-country-profile-eu{
-	.country-partners-container{
-		.country-partner-wrapper:nth-child(2n+1){
-			border-right: none !important;
-		}
-		.country-partner-wrapper:last-child{
+.more-than-two-partners{
+	div[id^="mini-panel-partner_in_country"]{
+		margin: 0px 0px;
+		.panels-flexible-row{
 			.panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first{
-				//border-bottom: none;
-			}
-		}
-		.country-partner-wrapper{
-			div[id^="mini-panel-partner_in_country"]{
-				margin: 0px 0px;
-				.panels-flexible-row{
-					.panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first{
-						padding-top: 30px;
-    					border-bottom: none;
-    					.partner-image-container{
-							img{
-								max-width: 140px;
-							}
-    					}
-    					.partner-text-container{
-							h2{
-								text-align: center !important;
-								font-size: @font-size1-4;
-							}
-    					}
+				padding-top: 30px;
+				border-bottom: none;
+				.partner-image-container{
+					img{
+						max-width: 140px;
 					}
-					.panels-flexible-row-new-1-inside.panels-flexible-row-inside-last{
-						.partner-contact-container,
-						.partner-social-container,
-						.partner-colaborators-container,
-						.partner-text2-container {
-							border-bottom: 2px solid @color-primary-dark;
-							.pane-contact-information-partner,
-							.pane-node-field-social-profile,
-							.pane-node-field-collaborator,
-							.pane-taxonomy-term-field-ncw-fp-link{
-								> .pane-content{
-									border-bottom: none;
-								}
-							}
-						}
-						.partner-text2-container{
+				}
+				.partner-text-container{
+					h2{
+						text-align: center !important;
+						font-size: @font-size1-4;
+					}
+				}
+			}
+			.panels-flexible-row-new-1-inside.panels-flexible-row-inside-last{
+				.partner-contact-container,
+				.partner-social-container,
+				.partner-colaborators-container,
+				.partner-text2-container {
+					border-bottom: 2px solid @color-primary-dark;
+					.pane-contact-information-partner,
+					.pane-node-field-social-profile,
+					.pane-node-field-collaborator,
+					.pane-taxonomy-term-field-ncw-fp-link{
+						> .pane-content{
 							border-bottom: none;
-							.pane-content{
-								border-bottom: 2px solid @color-primary-dark !important;
-							}
 						}
+					}
+				}
+				.partner-text2-container{
+					border-bottom: none;
+					.pane-content{
+						border-bottom: 2px solid @color-primary-dark !important;
 					}
 				}
 			}
 		}
-		.active{
-			float: none;
-			clear: both;
-			position: inherit;
-			margin-right: 0px !important;
-		}
-		.has-open-partner{
-			float: none;
-			border-left: none;
-			border-right: none !important;
-		}
+	}
+	.active{
+		float: none;
+		clear: both;
+		position: inherit;
+		margin-right: 0px !important;
+	}
+	.has-open-partner{
+		float: none;
+		border-left: none;
+		border-right: none !important;
 	}
 }
-/*END EU LEVEL COUNTRY*/
 
 /*PARTNER DETAIL PAGE
 **********************************/
