--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -3744,33 +3744,23 @@ div[id ^= "mini-panel-partner_in_country"]{
 			cursor: pointer;
 		}
 	}
-	.country-partners-container{
-		margin-bottom: 30px;
-		position: relative;
-		*{
-			box-sizing: border-box;
-		}
-		.active{
-			border-right: none !important;
-			float: left;
-			position: absolute;
-			margin-right: 30px;
-			.panels-flexible-row-new-1-inside.panels-flexible-row-inside-last{
-				display: block !important;
-			}
-		}
-		.has-open-partner{
-			float: right;
-			clear: both;
-			border-left: 2px solid @color-primary-dark;
-			border-right: none !important;
-		}
-	}
 	div[id^="mini-panel-partner_in_country"]{
 		.panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first{
 			border-top: 2px solid @color-primary-dark;
 			padding-top: 15px;
 			padding-bottom: 15px;
+		}
+		.partner-contact-container,
+		.partner-social-container,
+		.partner-colaborators-container,
+		.partner-text2-container {
+			
+		}
+		.pane-contact-information-partner,
+		.pane-node-field-social-profile,
+		.pane-node-field-collaborator,
+		.pane-taxonomy-term-field-ncw-fp-link{
+
 		}
 	}
 }
