--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -1026,14 +1026,24 @@ h1.page-header {
 					> div{
 						width: 100%;
 					}
-					.partner-contact-container, .partner-social-container, .partner-colaborators-container, .partner-text2-container{
+					.partner-contact-container, 
+					.partner-social-container, 
+					.partner-colaborators-container, 
+					.partner-text2-container{
 						min-height: auto;
+						margin-top: 0px;
+						border-bottom: none;
+					}
+					.pane-contact-information-partner,
+					.pane-node-field-social-profile,
+					.pane-node-field-collaborator{
+						border-bottom: 2px solid @color-primary-dark;
 						padding-top: 15px;
 						padding-bottom: 15px;
-						margin-top: 0px;
 					}
-					.partner-colaborators-container{
-						border-bottom: 2px solid @color-primary-dark;
+					.pane-focal-point-text{
+						padding-top: 15px;
+						padding-bottom: 15px;
 					}
 				}
 			}
@@ -1107,6 +1117,7 @@ h1.page-header {
 	div[id^="mini-panel-partner_in_country"]{
 		margin: 0px 0px;
 		.panels-flexible-row{
+			padding-bottom: 0px;
 			.panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first{
 				padding-top: 30px;
 				border-bottom: none;
@@ -1127,35 +1138,22 @@ h1.page-header {
 				.partner-social-container,
 				.partner-colaborators-container,
 				.partner-text2-container {
-					border-bottom: 2px solid @color-primary-dark;
-					.pane-contact-information-partner,
-					.pane-node-field-social-profile,
-					.pane-node-field-collaborator,
-					.pane-taxonomy-term-field-ncw-fp-link{
-						> .pane-content{
-							border-bottom: none;
-						}
-					}
+					border-bottom: none !important;
+					margin-top: 0px !important;
 				}
-				.partner-text2-container{
-					border-bottom: none;
-					.pane-content{
-						border-bottom: 2px solid @color-primary-dark !important;
-					}
+				.pane-contact-information-partner,
+				.pane-node-field-social-profile,
+				.pane-node-field-collaborator{
+					border-bottom: 2px solid @color-primary-dark;
+					padding-top: 15px;
+					padding-bottom: 15px;
+				}
+				.pane-focal-point-text{
+					padding-top: 15px;
+					padding-bottom: 15px;
 				}
 			}
 		}
-	}
-	.active{
-		float: none;
-		clear: both;
-		position: inherit;
-		margin-right: 0px !important;
-	}
-	.has-open-partner{
-		float: none;
-		border-left: none;
-		border-right: none !important;
 	}
 }
 
